docs: document the FFM backend's native-access requirement